--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,12 @@ h1 {
 	text-align: center;
 	font-size: 50px;
 	color: yellowgreen;
+	font-family: 'Rampart One', cursive;
+}
+
+h2 {
+	font-family: 'Rampart One', cursive;
+	color: blue
 }
 
 /* Style the form element */
