--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ input[type="text"] {
 	border-radius: 4px;
 }
 
-button[type="submit"] {
+input[type="submit"] {
 	margin-top: 10px;
 	padding: 5px 10px;
 	background-color: #4CAF50;
@@ -60,7 +60,7 @@ button[type="submit"] {
 	cursor: pointer;
 }
 
-button[type="submit"]:hover {
+input[type="submit"]:hover {
 	background-color: #3e8e41;
 }
 
